[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/items/Item.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/items/DeathBlock.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45, 50 )

[node name="DeathBlock" index="0" instance=ExtResource( 1 )]
collision_layer = 16385
mass = 50.0
gravity_scale = 25.0
linear_damp = 3.0
angular_damp = 10.0
script = ExtResource( 2 )

[node name="Obj" parent="." index="0"]
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="Pickup_area" index="0"]
position = Vector2( -0.429276, -0.643917 )

[node name="ColorRect" type="ColorRect" parent="." index="2"]
margin_left = -45.0
margin_top = -50.0
margin_right = 45.0
margin_bottom = 50.0
color = Color( 0.223529, 0.223529, 0.223529, 1 )

[node name="StaticTimer" type="Timer" parent="." index="3"]
process_mode = 0
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_DeathBlock_body_entered"]
[connection signal="timeout" from="StaticTimer" to="." method="_on_StaticTimer_timeout"]
